pyramus/src/main/webapp/css/application-management-mobile.css
/*
/////////////////////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////////////
////////////////////                                 ////////////////////////
////////////////////           MOBILE                ////////////////////////
////////////////////                                 ////////////////////////
/////////////////////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////////////
*/

body {
  background-color: #f5f5f5;
  color: #000;
  display: flex;
  flex-flow: column nowrap;
  font-family: "Exo 2", arial, sans-serif;
  font-size: 14px;
  font-weight: 400;
  justify-content: space-between;
  line-height: 1.5;
  margin: 0;
  min-height: 100vh;
  min-width: 320px;
  padding: 0;
}

a {
  color: #009fe3;
}

button,
input,
select,
textarea {
  font-family: "Exo 2", arial, sans-serif;
}

.application-actions-header {
  background: #000;
  display: flex;
  flex-flow: row nowrap;
  height: 45px;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index:99;
}

.application-actions-container {
  align-items: center;
  display: flex;
  flex-basis: auto;
  flex-grow: 1;
  flex-shrink: 1;
  max-width: 100%;
}

.application-action {
  align-items: center;
  background-color: transparent;
  background-size: contain;
  background-position: center center;
  background-repeat: no-repeat;
  border: 6px solid transparent;
  border-radius: 3px;
  color: #fff;
  cursor: pointer;
  display: flex;
  flex-flow: row nowrap;
  height: 32px;
  margin: 0 10px;
  transition: all 0.2s ease-in-out;
  width: 32px;
}

.application-action:hover {
  background-color: #414141;
}

.application-action__label {
  display: none;
}

.application-action.icon-back {
  background-image: url(../gfx/icons/32x32/actions/back-pyramus.png);
}

.application-action.icon-view {
  background-image: url(../gfx/icons/32x32/actions/view.png);
}

.application-action.icon-edit {
  background-image: url(../gfx/icons/32x32/actions/edit.png);
}

.application-action.icon-locked,
.application-action.icon-locked:hover {
  background-color: #d31111;
  background-image: url(../gfx/icons/32x32/actions/lock.png);
  border-color: #d31111;
}

.application-action.icon-unlocked,
.application-action.icon-unlocked:hover {
  background-color: #24c118;
  background-image: url(../gfx/icons/32x32/actions/unlock.png);
  border-color: #24c118;
}

.application-action.icon-logs {
  background-image: url(../gfx/icons/32x32/actions/logs.png);
  margin: 0 10px 0 auto;
}

.application-wrapper {
  display: flex;
  flex-flow: row wrap;
  margin: 45px 0 0; /* Top margin is Height of the navigation bar */
  width: 100%;
}

.application-section {
  background-color: #fff;
  border-bottom: 1px solid #ededed;
  display: flex;
  flex-basis: 100%;
  flex-grow: 1;
  flex-flow: column nowrap;
  flex-shrink: 1;
  margin: 0 0 10px;
  max-width: 100%;
  padding: 15px;
  position: relative;
}

.application-subsection {
  display: flex;
  flex-basis: 100%;
  flex-grow: 1;
  flex-flow: column nowrap;
  flex-shrink: 1;
  max-width: 100%;
  position: relative;
}
  
/* Data <section> */
.application-data {
  flex: 1 1 100%;
  max-width: 100%;
  order: 3;
}

.application-data-title {
  font-size: 20px;
  color: #009fe3;
  font-weight: 400;
  line-height: 1;
  margin: 0;
}

.application-sub-section {
  padding: 0 0 20px;
}

/* View mode application data */
.data-container {
  display: flex;
  flex-flow:row wrap;
  justify-content: center;
  margin: 10px 0;
}
 
.data-name {
  flex-basis: 0;
  flex-grow: 0;
  flex-shrink: 1;
  font-weight: 600;
  margin: 0 2% 0 0;
  min-width: 130px;
}
 
.data-value {
  flex-basis: 0;
  flex-grow: 1;
  flex-shrink: 1;
  font-weight: 400;
  word-wrap: break-word;
}

/* Meta <section> */
.application-meta {
  flex: 1 1 100%;
  max-width: 100%;
  order: 2;
  padding: 5px 15px;
}

/* Specific h3 style */
.application-meta-header {
  color: #009fe3;
}

 /* View mode application meta */
.meta-container {
  display: flex;
  flex-flow:row wrap;
  justify-content: center;
  margin: 10px 0;
}
 
.meta-name {
  flex-basis: 0;
  flex-grow: 0;
  flex-shrink: 1;
  font-weight: 600;
  margin: 0 2% 0 0;
  min-width: 130px;
}
 
.meta-value {
  flex-basis: 0;
  flex-grow: 1;
  flex-shrink: 1;
  font-weight: 400;
  word-wrap: break-word;
}

.user-exists-container {
  background: #fcdcdb;
  width: 100%;
  padding: 5px;
  border-radius: 3px;
  align-items: center;
  margin: 0 0 20px;
}

.user-exists-description-title {
  color: #6e0303;
  font-size: 16px;
  font-weight: 400;
  margin: 0 10px 5px;
}

.user-exists-description {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

.user-exists-description-piggy {
  background: url('../gfx/piggy.png') #fcdcdb no-repeat center center;
  background-size: contain;
  width: 48px;
  height: 48px;
  flex: 0 0 48px;
  margin: 2px 15px 0 5px;
}

.user-exists-description-actions {
  font-size: 14px;
  flex: 1 1 auto;
}

.user-exists-description-actions span {
  display: inline-block;
  margin: 4px 4px 4px 0;
}

.user-exists-user-link-container a {
  color: #fff;
  background: #f563a6;
  border-radius: 2px;
  display: inline-block;
  font-weight: 400;
  line-height: 1;
  padding: 4px 6px;
  text-decoration: none;
}

.additional-info-container {
  width: 100%;
}

/* Actions <section> */
.application-actions {
  flex: 1 1 100%;
  max-width: 100%;
  order: 1;
  padding: 10px;
}

.application-handling-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}
  
.application-handling-container.processing {
  position: relative;
}

.application-handling-option {
  border-radius: 2px;
  cursor: pointer;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  font-size: 12px;
  line-height: 1;
  margin: 4px;
  padding: 8px 10px;
  text-transform: uppercase;
}

.application-handling-option.backward-action {
  background-color: #7391a7;
}
/* ... */

